# nios2-linux

./: README.md
nios2-linux/3c120_default/: nios2_linux_3c120_125mhz_sys_sopc.ptf  nios2_linux_3c120_125mhz_sys_sopc.sopc  nios2_linux_3c120_125mhz_sys_sopc.sopcinfo  nios2_linux_3c120_125mhz_top.jdi  nios2_linux_3c120_125mhz_top.sof  rootfs.initramfs.contents  rootfs.jffs2  system.h  vmImage  vmlinux  zImage
nios2-linux/binutils/: config.sub  configure  configure.in  libtool.m4  ltconfig
nios2-linux/binutils/bfd/: Makefile.am  Makefile.in  archive.c  archures.c  bfd-in2.h  config.bfd  configure  configure.in  elf.c  elf32-nios2.c  libbfd-in.h  libbfd.h  reloc.c  srec.c  targets.c
nios2-linux/binutils/binutils/: configure  nios2_binutils_xfail.lst  objcopy.c  readelf.c
nios2-linux/binutils/gas/: Makefile.in  configure  configure.in
nios2-linux/binutils/gprof/: configure
nios2-linux/binutils/include/: bfdlink.h  dis-asm.h
nios2-linux/binutils/ld/: Makefile.am  Makefile.in  configure  configure.tgt  ldlang.c  ldmain.c
nios2-linux/binutils/opcodes/: Makefile.am  Makefile.in  configure  configure.in  disassemble.c
nios2-linux/boards/DE1_SD_Card_Audio/: Audio_PLL.v  DE1_SD_Card_Audio.qpf  DE1_SD_Card_Audio.qsf  DE1_SD_Card_Audio.sof  DE1_SD_Card_Audio.v  DE1_SD_Card_Audio_assignment_defaults.qdf  I2C_AV_Config.v  Reset_Delay.v  SDRAM_PLL.v  SD_CLK.v  SD_CMD.v  SD_DAT.v  system_0.ptf  zImage
nios2-linux/elf2flt/: elf2flt.ld
nios2-linux/gcc3/: config.sub  libtool.m4  ltconfig
nios2-linux/gcc3/boehm-gc/: configure  ltconfig
nios2-linux/gcc3/gcc/: collect2.c  combine.c  config.gcc  cse.c  flow.c  stor-layout.c  target-def.h  target.h  varasm.c
nios2-linux/gcc3/libstdc++-v3/: acinclude.m4  aclocal.m4  configure  configure.host  crossconfig.m4
nios2-linux/insight/: Makefile  config.cache  config.status  config.sub  configure  configure.in  djunpack.bat  ltconfig  md5.sum
nios2-linux/insight/bfd/: Makefile  Makefile.am  Makefile.in  archures.c  bfd-in2.h  bfd-in3.h  bfdver.h  config.bfd  config.cache  config.h  config.status  configure  (+10 more)
nios2-linux/openip/: README
nios2-linux/toolchain-build/: Makefile  gdb.mk  u-boot.mk
nios2-linux/u-boot/: .boards.depend  System.map  u-boot  u-boot.lds  u-boot.map  u-boot.srec
nios2-linux/uClinux-dist/: .config  .config.old  Kconfig  Makefile  auto.conf  autoconf.h  config.arch  release_notes
nios2-linux/uClinux-dist/lib/libmcapi/libmcapi-1.0/: Makefile.am  Makefile.in  configure.ac  mcapi.c  mcapi_trans_stub.c
nios2-linux/uClinux-dist/lib/libmcapi/libmcapi-1.0/include/: mcapi_datatypes.h  transport_sm.h
nios2-linux/uClinux-dist/lib/libmcapi/libmcapi-1.0/tests/: Makefile.am  endpoints1.c  msg1.c  pkt1.c  scl1.c
nios2-linux/uClinux-dist/lib/libmcapi/libmcapi-1.0/trans_impl/: tran_impl_dev.c
nios2-linux/uClinux-dist/lib/libmcapi/libmcapi-2.0/: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  mcapi.c  mcapi_trans_stub.c
nios2-linux/uClinux-dist/lib/libmcapi/libmcapi-2.0/include/: mca.h  mcapi.h  mcapi_dev_impl.h  mcapi_test.h  transport_sm.h
nios2-linux/uClinux-dist/lib/libmcapi/libmcapi-2.0/tests/: Makefile.am  Makefile.in  cces_msg1.c  endpoints1.c  msg1.c  msg2.c  pkt1.c  pkt2.c  pkt3.c  scl1.c  scl2.c
nios2-linux/uClinux-dist/lib/libmcapi/libmcapi-2.0/trans_impl/: tran_impl_dev.c
nios2-linux/uClinux-dist/user/blkfin-apps/icc_utils/libmcapi_coreb/libmcapi-1.0/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  mcapi.c  mcapi_trans_stub.c
nios2-linux/uClinux-dist/user/blkfin-apps/icc_utils/libmcapi_coreb/libmcapi-1.0/include/: mcapi.h  mcapi_datatypes.h  mcapi_dev_impl.h  mcapi_trans.h  transport_sm.h
nios2-linux/uClinux-dist/user/blkfin-apps/icc_utils/libmcapi_coreb/libmcapi-2.0/: Makefile.am  Makefile.in  README  configure  configure.ac  mcapi.c  mcapi_trans_stub.c
nios2-linux/uClinux-dist/user/blkfin-apps/icc_utils/libmcapi_coreb/libmcapi-2.0/include/: mca.h  mcapi.h  mcapi_impl_spec.h  transport_sm.h
(+32640 files in other folders)
