INCLUDES                = -I$(top_srcdir)/include

bin_PROGRAMS            = endpoints1 msg1 pkt1 scl1

endpoints1_SOURCES         = endpoints1.c
endpoints1_LDADD           = $(top_builddir)/libmcapi.la

msg1_SOURCES        = msg1.c
msg1_LDADD          = $(top_builddir)/libmcapi.la

pkt1_SOURCES    = pkt1.c
pkt1_LDADD      = $(top_builddir)/libmcapi.la

scl1_SOURCES    = scl1.c
scl1_LDADD      = $(top_builddir)/libmcapi.la
