AUTOMAKE_OPTIONS = foreign

INCLUDES = -I$(top_srcdir)/include
library_includedir = $(includedir)/$(PACKAGE_NAME)
library_include_HEADERS = include/mca.h include/mcapi_impl_spec.h include/mcapi.h  include/transport_sm.h
lib_LTLIBRARIES = libmcapi_coreb.la
libmcapi_coreb_la_SOURCES  = mcapi.c mcapi_trans_stub.c


